--- a/tex/allbib.bib
+++ b/tex/allbib.bib
@@ -1,3 +1,14 @@
+@article{nelson2018origins,
+  title={Origins of the 1918 pandemic: revisiting the swine “mixing vessel” hypothesis},
+  author={Nelson, Martha I and Worobey, Michael},
+  journal={American journal of epidemiology},
+  volume={187},
+  number={12},
+  pages={2498--2502},
+  year={2018},
+  publisher={Oxford University Press}
+}
+
 @article{ma2009pig,
   title={The pig as a mixing vessel for influenza viruses: human and veterinary implications},
   author={Ma, Wenjun and Kahn, Robert E and Richt, Juergen A},
