--- a/tex/cover.tex
+++ b/tex/cover.tex
@@ -90,25 +90,29 @@ Chicago, IL 60637\\
 \Space
 \Space
 
-% \EDITOR\\
-% \JNAME\\
+ \EDITOR\\
+ \JNAME\\
 % \JADDR
 
 Dear \BEDITOR  
 
-Please find enclosed the  manuscript entitled ``\small \textbf{\TITLE}'' for your consideration for publication in \JNAME as an original research article. In this study we develop a novel computational approach to learn from viral sequence databases to \textbf{forecast future mutations, predict future strains, and map evolutionary trajectories}.
-Our results are particularly important in the context of COVID-19, which is continuing to demonstrate the potential for devastation from global pandemics. In this study we develop tools that will make us better prepared for the inevitable future pandemic; ability to rank-order  strains currently in the animal reservoirs by their quantitative emergence risk will help focus mitigation efforts and perhaps develop preemptive countermeasures.
+Please find enclosed the  manuscript entitled ``\textbf{\TITLE}'' for your consideration for publication in \JNAME as an original research article. In this study we develop a novel computational approach to learn from viral sequence databases to \textbf{quantitatively assess the pandemic potential of animal strains that are not yet known to circulate in humans}. This capability might be  crucially important to enable preemptive pandemic mitigation strategies, the relevance of which cannot be overstated in the light of the recent pandemic.
 
-We demonstrate the forecasting capability of our approach by  outperforming WHO's flu vaccine recommendations nearly consistently over the past two decades. We also analyze the  \hcov origin problem, and produce a ranked list of animal species, ordered according to the quantitative likelihood of hosting an immediate progenitor. 
+While zoonotic emergence is suspected to have caused multiple devastating pandemics in the past, and despite vast amounts of money and effort being spent on bio-surveillance that collects thousands of strains annually, our ability to risk-rank these collected strains remains limited.
 
-We note that current surveillance paradigms do not address this problem, and do not quantitatively assess jump risk. Existence of  viral diversity in  bats or swines or wild ducks, while important, might not transparently map to  emergence risk. Here, we show that a  precise  calculation is possible: provided  sequence similarity  is evaluated via a new biology-aware metric, which we call the q-distance. Using novel machine learning algorithms to learn from tens of thousands of sequences, we explicitly relate this new distance  to the likelihood of spontaneous jumps. 
+The state-of-the-art Influenza Risk Assessment Tool (IRAT) from the CDC to assess such risk includes time-consuming experimental assays, taking possibly weeks to evaluate each strain (only 22 have been analyzed in past 6-8 years, while $6,000$ strains have been collected post-2020). Our calculations take about 6s/strain, while strongly correlating with the published scores, and thus may provide the foundation on which a proactive intervention strategy can be built in future.
+
+Additionally, with growing vaccine hesitancy in the US, it might be easier as a public health measure to preemptively inoculate animals against targeted strains, than it is to field such policies in the human population.
+
+As an added advantage, our approach, which essentially models  how viable genotypic variations are shaped by evolutionary constraints using only genomic sequences  of key viral proteins, can predict future mutations, and dominant strains in future flu seasons, sufficiently ahead of time,  to improve vaccine cocktail recommendations.
+
 
 We are led by a multi-disciplinary team  of experts in  machine learning (Chattopadhyay), and vaccine design (Esser-Kahn), and is a collaboration between the Department of Medicine and the Pritzker School of Molecular Engineering, at the University of Chicago.
  
-We believe that  the potential  clinical importance   of our results in predicting emergence, ranking risky pathogens and the design of escape resistant vaccines,   merits consideration  for  publication in \JNAME. We look forward to, and  hope for your positive  response.
+We believe that  the potential  importance   of our results in predicting emergence, ranking risky pathogens and potentially improving the design of the annual flu-shot,   merits consideration  for  publication in \JNAME. We look forward to, and  hope for your positive  response.
 \Space
 \vspace{-14pt}
-
+ 
 Sincerely,
 \vspace{-24pt}
 
