--- a/tex/extfiguresandtables.tex
+++ b/tex/extfiguresandtables.tex
@@ -43,30 +43,26 @@ $^\star$ Dominant strain is calculated as the one closest to the centroid in the
 % %#############################################
 
 % \begin{table}[!hb]\centering
-
 }
 \vskip .5em
 \mnp{\textwidth}{
   
-\captionN{H1N1 HA Southern Hemisphere}\label{tabrec1}
-\vspace{-10pt}
+\captionN{H1N1 HA Southern Hemisphere}\label{tabrec2}
 
 \sffamily\fontsize{7}{8}\selectfont
 
 \input{Figures/tabdata/south_h1n1_ha.tex}
 \flushleft
 
-\fontsize{7}{7}\selectfont
+\fontsize{8}{8}\selectfont
 $^\star$ Dominant strain is calculated as the one closest to the centroid in the strain space that year in the edit distance metric
-
 }
 \end{table}
-
-%#############################################
-%#############################################
-%#############################################
-%#############################################
-
+ \else
+ \refstepcounter{table}\label{tabperf}
+ \fi
+% %#############################################
+% %#############################################
 \begin{table}[!ht]\centering
 \captionN{H3N2 HA Northern Hemisphere}\label{tabrec4}
 
@@ -75,17 +71,14 @@ $^\star$ Dominant strain is calculated as the one closest to the centroid in the
 \input{Figures/tabdata/north_h3n2_ha.tex}
 \flushleft
 
-\fontsize{8}{8}\selectfont
+\fontsize{7}{7}\selectfont
 $^\star$ Dominant strain is calculated as the one closest to the centroid in the strain space that year in the edit distance metric
-
-
 \end{table}
-
 %#############################################
 %#############################################
 
 \begin{table}[!ht]\centering
-\captionN{H3N2 HA Southern Hemisphere}\label{tabrec5}
+\captionN{H3N2 HA Southern Hemisphere}\label{tabrec6}
 
 \sffamily\fontsize{7}{8}\selectfont
 
