--- a/tex/Figures/tabdata/irat_predictions_current.tex
+++ b/tex/Figures/tabdata/irat_predictions_current.tex
@@ -14,7 +14,7 @@ Influenza Virus & Subype & IRAT Date &IRAT Emergence Score &IRAT Impact Score &H
  A/Astrakhan/3212/2020 &H5N8& Mar  2021 &4.6&5.2&95&92&0.2366&0.5451&0.3591&4.8&6.1\\\hline
  A/Netherlands/219/2003 &H7N7& Jun  2012 &4.6&5.8&1000&1000&0.1658&0.4596&0.2760&3.9&4.5\\\hline
  A/American  wigeon/South  Carolina/AH0195145/2021 &H5N1& Mar  2022 &4.4&5.1&48&45&0.2355&0.3135&0.2717&4.3&5.2\\\hline
- A/Jiangxi-Donghu/346/2013$^{\star\star}$ &H10N8& Feb  2014 &4.3&6.0&-1&-1&0.2097&0.2299&0.2196&4.2&4.8\\\hline
+ A/Jiangxi-Donghu/346/2013$^{\star\star}$ &H10N8& Feb  2014 &4.3&6.0&&&0.2097&0.2299&0.2196&4.2&4.8\\\hline
  A/gyrfalcon/Washington/ 41088/2014 &H5N8& Mar  2015 &4.2&4.6&95&92&0.2387&0.5438&0.3603&4.8&6.1\\\hline
  A/Northern  pintail /Washington/40964/2014 &H5N2& Mar  2015 &3.8&4.1&95&92&0.2327&0.5099&0.3445&4.6&5.8\\\hline
  A/canine/Illinois/12191/2015 &H3N2& Jun  2016 &3.7&3.7&1000&1000&0.0179&0.0374&0.0259&6.2&6.1\\\hline
@@ -22,5 +22,5 @@ Influenza Virus & Subype & IRAT Date &IRAT Emergence Score &IRAT Impact Score &H
  A/turkey/Indiana/1573-2/2016 &H7N8& Jul  2017 &3.4&3.9&1000&1000&0.0438&0.4165&0.1351&4.0&3.8\\\hline
  A/chicken/Tennessee/17-007431-3/2017 &H7N9& Oct  2017 &3.1&3.5&1000&1000&0.0335&0.5127&0.1310&3.8&3.6\\\hline
  A/chicken/Tennessee/17-007147-2/2017 &H7N9& Oct  2017 &2.8&3.5&1000&1000&0.0839&0.5127&0.2075&3.5&3.6\\\hline
- A/duck/New  York/1996$^\star$ &H1N1& Nov  2011 &2.3&2.4&1000&1000&-1&-1&-1&-1&-1\\\hline
+ %A/duck/New  York/1996$^\star$ &H1N1& Nov  2011 &2.3&2.4&1000&1000&-1&-1&-1&-1&-1\\\hline 
 \end{tabular}
